--- a/terraform/modules/aws_cicd_pipeline/templates/buildspec.yml
+++ b/terraform/modules/aws_cicd_pipeline/templates/buildspec.yml
@@ -18,3 +18,8 @@ phases:
       - echo Build completed on `date`
       - echo Pushing the Docker images...
       - docker push $ECR_REPOSITORY_URL:latest
+      - echo Writing image definitions file...
+      - printf '[{"name":"%s","imageUri":"%s"}]' $CONTAINER_NAME $ECR_REPOSITORY_URL:latest > imagedefinitions.json
+      - cat imagedefinitions.json
+artifacts:
+  files: imagedefinitions.json      
